# dash-cockpit

./: Brainstorming.md  CLAUDE.md  CONFIGURATOR_AND_EXPORT_PLAN.md  README.md  RESEARCH_NOTES.md  ROADMAP.md  pyproject.toml
examples/demo_cockpit/: README.md  app.py  csv_zip_backend.py
examples/demo_cockpit/team_finance/: __init__.py
examples/demo_cockpit/team_finance/cards/: cash_position.py  revenue_trend.py
examples/demo_cockpit/team_finance/templates/: __init__.py  kpi_lookup.py
examples/demo_cockpit/team_ops/: __init__.py
examples/demo_cockpit/team_ops/cards/: broken_card.py  headcount.py  ticket_volume.py
examples/demo_cockpit/team_sizes/: __init__.py
src/dash_cockpit/: __init__.py  _app.py  _card.py  _chrome.py  _configurator.py  _error.py  _export.py  _layout.py  _packing.py  _page.py  _presets.py  _refresh.py  _registry.py  _share.py  _template.py
tests/: conftest.py
tests/dash_cockpit/: test_app.py  test_card.py  test_configurator.py  test_error.py  test_export.py  test_layout.py  test_packing.py  test_page.py  test_presets.py  test_refresh.py  test_registry.py  test_share.py  test_template.py
