[project]
name = "dash-cockpit"
dynamic = ["version"]
description = "Cards-first executive analytics cockpit framework for Plotly Dash."
keywords = ["plotly", "dash", "visualization", "dashboard", "cockpit"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = "MIT"
authors = [
    { name = "Simon Niederberger", email = "s.niederberger@hotmail.com" },
]
maintainers = [
    { name = "Simon Niederberger", email = "s.niederberger@hotmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "dash>=4.0.0",
    "dash-bootstrap-components>=1.0.0",
    "dash-snap-grid>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/saemeon/dash-cockpit"
Repository = "https://github.com/saemeon/dash-cockpit"

[dependency-groups]
test = ["pytest", "pytest-cov"]
doc = ["mkdocs", "mkdocs-material", "mkdocstrings[python]", "mike"]
dev = [
    "ruff",
    "prek",
    "ty",
    { include-group = "test" },
    { include-group = "doc" },
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "src/dash_cockpit/_version.py"
fallback_version = "0.0.0"

[tool.setuptools.dynamic]
version = { attr = "dash_cockpit._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dash_cockpit = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dash_cockpit --cov-report=term-missing"

[tool.ty.src]
include = ["src"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "PERF"]
ignore = ["E203", "E501"]
